cluster/apps/networking/pod-gateway-vpn/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-gateway-vpn-pod-gateway
  namespace: networking
  labels:
    app.kubernetes.io/instance: pod-gateway-vpn
    app.kubernetes.io/name: pod-gateway
spec:
  egress:
    - ports:
        - port: 1194
          protocol: UDP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - to:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: pod-gateway-vpn
      app.kubernetes.io/name: pod-gateway
  policyTypes:
    - Egress
